Archive2/f4/afea2026306223/output
main.cpp: In function 'int main()':
main.cpp:7:9: error: 'coutrow' is not a member of 'std'
         std::coutrow 42;
         ^
main.cpp:7:22: error: expected ';' before numeric constant
         std::coutrow 42;
                      ^
